--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,10 @@
 services:
-  - type: static
+  - type: web
     name: furnico-tech-web
-    env: static
-    # If using Vite, use 'npm run build' and 'dist'
-    # If using Create React App, use 'npm run build' and 'build'
+    runtime: static
     buildCommand: npm install && npm run build
-    publishPath: dist 
+    staticPublishPath: dist
     routes:
-      # This handles client-side routing (SPA)
       - type: rewrite
         source: /*
         destination: /index.html
