--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.3.7",
     "@tailwindcss/vite": "^4.1.18",
+    "firebase": "^12.9.0",
+    "formik": "^2.4.9",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
